# platform-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci.yml  dev-build.yml  pr-build.yml  release.yml  test-install.yml
docs/: install-pr.ps1  install-pr.sh  install.ps1  install.sh
src/semantics/: __init__.py  __main__.py  cli.py  launcher.py
src/semantics/core/: path.py
src/semantics/modules/: __init__.py  objects.py  transcribe.py
src/semantics/modules/audio/: __init__.py  cli.py
src/semantics/modules/audio/handlers/: __init__.py  extract_metadata.py  transcribe.py
src/semantics/modules/document/: __init__.py  cli.py
src/semantics/modules/document/handlers/: __init__.py  extract_text.py
src/semantics/modules/video/: __init__.py  cli.py
src/semantics/modules/video/handlers/: __init__.py  detect_objects.py  transcribe.py
tests/: __init__.py  conftest.py  test_cli.py  test_objects.py  test_transcribe.py  test_version.py
tests/build-tests/: __init__.py  conftest.py  test_exe_audio.py  test_exe_document.py  test_exe_errors.py  test_exe_help.py  test_exe_launcher.py  test_exe_modules.py  test_exe_routing.py  test_exe_version.py  test_exe_video.py
tests/integration/: test_routing.py
tests/unit/: test_cli_main.py  test_dynamic_help.py  test_launcher.py
tests/unit/modules/: test_audio.py  test_document.py  test_video.py
