[project]
name = "semantics"
dynamic = ["version"]
description = "A semantic analysis CLI tool for processing multiple file types"
readme = "README.md"
authors = [
    { name = "copilot-swe-agent[bot]", email = "198982749+Copilot@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
semantics = "semantics.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Hatch version configuration for dynamic versioning from VCS (Git)
[tool.hatch.version]
source = "vcs"

# Configuration for Python Semantic Release
# This tool automates versioning based on Conventional Commits
[tool.semantic_release]
major_on_zero = true
branch = "main"
upload_to_vcs_release = true
build_command = "pip install uv==0.5.11 && uv build"

# Commit parser configuration for Conventional Commits
[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "docs", "style", "refactor", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

# Changelog configuration
[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []
